examples/errors/parsing/spec_color.cn
sort Color = { Red : () | Blue : () | Green : () }

fun isWarm : Color -> Bool [spec] = {
    Red () -> true
  | Blue () -> false
  | Green () -> false
}

main : () [impure] = ()
